--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+
 ENV/
 env.bak/
 venv.bak/
@@ -183,3 +183,9 @@ secrets.json
 tmp/
 temp/
 *.tmp 
+
+실행계획.md
+
+nohup.out
+
+venv/
