--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ pydantic==2.5.0
 pydantic-settings==2.0.0
 PyYAML==6.0.2
 requests==2.31.0
-openai==1.3.7
+openai>=1.52.0
 python-dotenv==1.0.0
-asyncio==3.4.3
 aiohttp==3.9.1
 pytest==7.4.3
 pytest-asyncio==0.21.1 
